hphp/test/slow/inout/bad-call-11.php.expectf
Fatal error: You cannot decorate this argument as `inout` in %s/bad-call-11.php on line 10
